examples/test/testpolicy18999.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18999
  namespace: namespace369
spec:
  podSelector:
    matchLabels:
      key0: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value48
          key20: value28
          key3: value47
      podSelector:
        matchLabels:
          key20: value17
